--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
+    "sass": "^1.51.0",
     "styled-components": "^5.3.3",
     "three": "0.135.0",
     "web-vitals": "^2.1.4"
