--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^8.2.2",
+    "framer-motion": "^6.3.3",
     "pug": "^3.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
