--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.7",
     "react-spinners": "^0.12.0",
     "sass": "^1.51.0",
     "styled-components": "^5.3.3",
