--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.7",
     "react-spinners": "^0.12.0",
+    "react-toastify": "^9.0.1",
     "sass": "^1.51.0",
     "styled-components": "^5.3.3",
     "three": "0.135.0",
