--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6.3.3",
     "pug": "^3.0.2",
     "react": "^17.0.1",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^6.3.0",
