--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^9.6.9",
     "framer-motion": "^6.3.3",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "web3": "^1.7.3",
+    "web3-eth": "^1.7.3",
+    "web3-react": "^5.0.5",
     "pug": "^3.0.2",
     "react": "^17.0.1",
     "react-cookie-consent": "^7.4.1",
