--- a/package.json
+++ b/package.json
@@ -5,24 +5,22 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@openzeppelin/contracts": "^4.5.0",
     "@react-three/drei": "7.27.1",
     "@react-three/fiber": "7.0.21",
     "@reduxjs/toolkit": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "firebase": "^9.6.9",
-    "framer-motion": "^6.3.3",
-    "@openzeppelin/contracts": "^4.5.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "web3": "^1.7.3",
-    "web3-eth": "^1.7.3",
-    "web3-react": "^5.0.5",
+    "firebase": "^9.6.9",
+    "framer-motion": "^6.3.3",
     "pug": "^3.0.2",
     "react": "^17.0.1",
     "react-cookie-consent": "^7.4.1",
     "react-dom": "^17.0.1",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
@@ -32,7 +30,10 @@
     "sass": "^1.51.0",
     "styled-components": "^5.3.3",
     "three": "0.135.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.3",
+    "web3-eth": "^1.7.3",
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
