added credit card payment

--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@testing-library/user-event": "^7.1.2",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "card-validator": "^8.1.1",
     "firebase": "^9.6.9",
     "framer-motion": "^6.3.3",
     "pug": "^3.0.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.4.0",
     "react-cookie-consent": "^7.4.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-hot-toast": "^2.2.0",
     "react-redux": "^7.1.3",
